# alphabet_prediction

./: Dataset huruf.csv  README.md  client.py  orientasi.py  pyproject.toml  tubees.py  tubes.py  tubes.ui
